# psxquake-redux

./: .clang-format  .gitignore  CMakeLists.txt  README.md
data/psx/: .gitignore  iso.xml
include/: adivtab.h  anorm_dots.h  anorms.h  asm_draw.h  asm_i386.h  block16.h  block8.h  bspfile.h  client.h  cmd.h  common.h  console.h  cvar.h  d_iface.h  d_ifacea.h  d_local.h  dosisms.h  draw.h  gl_model.h  gl_warp_sin.h  glquake.h  glquake2.h  input.h  keys.h  mathlib.h  menu.h  model.h  modelgen.h  mpdosock.h  murmurhash2.h  net.h  net_bw.h  net_dgrm.h  net_ipx.h  net_mp.h  net_ser.h  net_udp.h  net_vcr.h  net_wins.h  net_wipx.h  (+23 more)
include/mathlib/: features.h
include/psx/: files.h  gl.h  io.h
include/psx/std/GL/: gl.h  glu.h
include/util/: hashlib.h  xxh3.h
scripts/mipsle-gcc/: PKGBUILD
src/: chase.c  cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c  cmd.c  common.c  console.c  crc.c  cvar.c  host.c  host_cmd.c  keys.c  mathlib.c  menu.c  murmurhash2.c  pr_cmds.c  pr_edict.c  pr_exec.c  r_part.c  sbar.c  snd_mem.c  snd_mix.c  sv_main.c  sv_move.c  sv_phys.c  sv_user.c  view.c  wad.c  world.c  zone.c
src/mathlib/: CMakeLists.txt  exp_data.c  libm.h  log2_data.c  log_data.c
src/network/: net_loop.c  net_main.c  net_none.c  net_vcr.c
src/platform/: CMakeLists.txt
src/platform/null/: CMakeLists.txt  snd_null.c  sys_null.c  vid_null.c
src/platform/psx/: CMakeLists.txt  gl.c  gl_vidpsx.c  gl_vidpsx_vram.c  in_psx.c  snd_psx.c  stub_gl.c  sys_psx.c  sys_psx_fileio.c  vid_psx.c
src/platform/psx/std/: io.c  lib.c  lib_bsearch.c  lib_qsort.c  string.c
src/platform/sdl3/: CMakeLists.txt  cd_sdl3.c  gl_vidsdl3.c  in_sdl3.c  snd_sdl3.c  sys_sdl3.c  vid_sdl3.c
src/render/: CMakeLists.txt
src/render/gl/: CMakeLists.txt  gl_draw.c  gl_mesh.c  gl_model.c  gl_refrag.c  gl_rlight.c  gl_rmain.c  gl_rmisc.c  gl_rsurf.c  gl_screen.c  gl_warp.c
src/render/psx/: CMakeLists.txt  psx_draw.c  psx_mesh.c  psx_model.c  psx_primitives.c  psx_primitives2.c  psx_rlight.c  psx_rmain.c  psx_rmisc.c  psx_rsurf.c  psx_screen.c  psx_warp.c
src/render/software/: CMakeLists.txt  d_edge.c  d_fill.c  d_init.c  d_modech.c  d_part.c  d_polyse.c  d_scan.c  d_sky.c  d_sprite.c  d_surf.c  d_vars.c  d_zpoint.c  draw.c  model.c  nonintel.c  r_aclip.c  r_alias.c  r_bsp.c  r_draw.c  r_edge.c  r_efrag.c  r_light.c  r_main.c  r_misc.c  r_sky.c  r_sprite.c  r_surf.c  r_vars.c  screen.c
